--- a/aula14.html
+++ b/aula14.html
@@ -7,6 +7,7 @@
    
   </head>
   <body> 
+      <img id ="banner" src ="banner.jpg">
       <h1>Sobre barbearia Alura</h1>
       <p> Localizado no coração da cidade a <strong> Barearia Alura</strong> traz para o mercado o que há de melhor para seu cabelo e barba.
        Fundada em 2019, a Barbearia Alura já e destaque na cidade e conquista novos clientes a cada dia.</p>
