--- a/aula15.html
+++ b/aula15.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+   <head>
+          <meta charset="UTF-8">
+          <title> Barbearia Alura</title>
+          <link rel = "stylesheet" href = "style.css">
+   
+  </head>
+  <body> 
+      <img id ="banner" src ="banner.jpg">
+      <h1>Sobre barbearia Alura</h1>
+      <p> Localizado no coração da cidade a <strong> Barearia Alura</strong> traz para o mercado o que há de melhor para seu cabelo e barba.
+       Fundada em 2019, a Barbearia Alura já e destaque na cidade e conquista novos clientes a cada dia.</p>
+       <p id = "missao"><em> Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+       
+       <p>Oferecemos profissonais experientes e antenados às mudanças no munda da moda.
+        O atendimento possui padrão de excelência e agilidade, garatindo qualidade e satisfação dos nossos clientes.</p>
+       <h2>Benefícios</h2>
+       <ul>
+         <li class= "itens">Atendimento aos Clientes</li>
+           <li class= "itens">Espaço diferenciados</li>
+           <li class= "itens">Localizaçao</li>
+           <li class= "itens">Profissionais qualificados</li>
+       </ul>
+  </body>
+</html>
 
