--- a/aula15.html
+++ b/aula15.html
@@ -8,6 +8,7 @@
   </head>
   <body> 
       <img id ="banner" src ="banner.jpg">
+      <div class="principal">
       <h1>Sobre barbearia Alura</h1>
       <p> Localizado no coração da cidade a <strong> Barearia Alura</strong> traz para o mercado o que há de melhor para seu cabelo e barba.
        Fundada em 2019, a Barbearia Alura já e destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -15,6 +16,7 @@
        
        <p>Oferecemos profissonais experientes e antenados às mudanças no munda da moda.
         O atendimento possui padrão de excelência e agilidade, garatindo qualidade e satisfação dos nossos clientes.</p>
+       </div= class="benefícios">
        <h2>Benefícios</h2>
        <ul>
          <li class= "itens">Atendimento aos Clientes</li>
