--- a/aula15.html
+++ b/aula15.html
@@ -24,6 +24,8 @@
            <li class= "itens">Localizaçao</li>
            <li class= "itens">Profissionais qualificados</li>
        </ul>
+       <img src ="banner.jpg" class="imagembenefícios">
+       </div>
   </body>
 </html>
 
