--- a/aula12.html
+++ b/aula12.html
@@ -13,8 +13,8 @@
    
   </head>
   <body> 
-      <h1 style="text-align: center">Sobre barbearia Alura</h1>
-      <p > Localizado no coração da cidade a <strong> Barearia Alura</strong> traz para o mercado o que há de melhor para seu cabelo e barba.
+      <h1 style="text-align: center">Sobre Barbearia Alura</h1>
+      <p > Localizado no coração da cidade a <strong> Barbearia Alura</strong> traz para o mercado o que há de melhor para seu cabelo e barba.
        Fundada em 2019, a Barbearia Alura já e destaque na cidade e conquista novos clientes a cada dia.</p>
        <p style="font-size: 20px;" ><em> Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
        
