--- a/aula13.html
+++ b/aula13.html
@@ -7,7 +7,7 @@
    
   </head>
   <body> 
-      <h1>Sobre barbearia Alura</h1>
+      <h1 style="text-align: center">Sobre barbearia Alura</h1>
       <p> Localizado no coração da cidade a <strong> Barearia Alura</strong> traz para o mercado o que há de melhor para seu cabelo e barba.
        Fundada em 2019, a Barbearia Alura já e destaque na cidade e conquista novos clientes a cada dia.</p>
        <p><em> Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
